docs/css/style.css
body {
  background-color: #fefcfb
}

section:not(:first-of-type) {
  padding-top: 2em;
}

.logo-container {
  
}

.logo {
  max-width: 100%;
}

.badge {
  font-size: 0.8em;
  font-weight: 500;
}

.badge.text-bg-light {
  background: #f1f1f1 !important;
  color: #777777 !important;
}

.exhibit-overview .card img {
  filter: contrast(0.7) brightness(1.8) grayscale(0.9);
}

img {
  max-width: 100%;
  height: auto;
}

.figure.video,
.figure.video iframe {
  width: 100%;
  aspect-ratio: 16 / 9;
}

.storyboard figure:not(:last-of-type) {
  margin-bottom: 4em;
}

.profile {
  padding-top: 1em;
  padding-bottom: 1em;
}

.profile img {
  border-radius:  1.6em;
  margin-right: 0.4em;
  padding-bottom: 0.2em;
  height: 3em;
  width: auto;
  filter: grayscale(0.9);
}

.nav-link {
  padding: 0.5em 1em;
  border-radius: 0.4em;
}

.nav-link:hover {
  background: #f6f8fc;
}

body nav ul li ul.home,
body nav ul li ul.naturalness,
body nav ul li ul.process,
body nav ul li ul.showcase,
body nav ul li ul.mvp,
body nav ul li ul.video,
body nav ul li ul.poster,
body nav ul li ul.nextsteps {
  display: none;
}

body.home nav ul li ul.home,
body.naturalness nav ul li ul.naturalness,
body.process nav ul li ul.process,
body.showcase nav ul li ul.showcase,
body.mvp nav ul li ul.mvp,
body.video nav ul li ul.video,
body.poster nav ul li ul.poster,
body.nextsteps nav ul li ul.nextsteps {
  display: block;
}

header .nav-link:hover {
  background: unset;
}

.nav-link.active {
  background: #edf5ff;
  color: #0a58ca;
  font-weight: 500;
}

nav ul li ul {
  margin-left: 1rem;
}

nav ul li ul li a.nav-link {
  padding: unset;
  background: unset;
  margin: 0.3rem 0;
  color: #8899ab;
}

nav ul li ul li a.nav-link.active {
  color: inherit !important;
  background-color: unset !important;
  background: unset !important;
  color: #212529;
}

nav ul li ul li a.nav-link:hover {
  background: unset;
  opacity: 0.86;
  color: #212529;
}

ul.posters {
  padding-left: unset;
}

ul.posters li {
  list-style: none;
  line-height: 2;
}

li.xmark {
  opacity: 0.6;
}

.card,
.card-header {
  border-color: #f3f3f3;
}

section.highlight {
  background-color: #282A36;
  margin-top: 2rem;
  margin-left: -1rem!important;
  margin-right: -1rem!important;
  padding: 1rem!important;
  color: white;
}

section.highlight.first {
  margin-top: -1rem;
  border-radius:  0.375rem;
}

.main-content section:first-child {
  padding-top: 4rem !important;
}

.featured {
  margin-left: -1rem!important;
  margin-right: -1rem!important;
  width: calc(100%+2rem);
}

.featured p:last-of-type,
.highlight p:last-of-type {
  margin-block-end: 0;
}

section.highlight span,
span.highlight {
  color: white;
  background: #FF9900;
}

.highlight .profile span {
  background: unset;
}

span.highlight {
  padding: 0.4rem 0.6rem;
  margin-top: 0.4rem;
  margin-bottom: 0.4rem;
  display: inline-block;
}

footer {
  margin-top: 8em;
  background: #132740;
  color: #abacba;
}

.navbar {
  --bs-navbar-padding-y: 0;
}

button.navbar-toggler {
  margin-bottom: -4rem;
  background-color: white;
}

.main-content.card {
  border: none;
}

@media (min-width: 768px) {
  .main-content section:first-child {
    padding-top: unset !important;
  }
  .main-content.card {
    border: var(--bs-card-border-width) solid #f3f3f3;
  }
  .home .main-content section:first-child {
    padding-top: 4rem !important;
  }
  .navbar {
    --bs-navbar-padding-y: 0.5rem;
  }
  .page {
    padding-top: 6em;
    min-height: 100vh;
  }
  section.highlight {
    margin-left: -1.5rem!important;
    margin-right: -1.5rem!important; 
    padding: 1.5rem!important;
  }
  section.highlight.first {
    margin-top: -1.5rem;
  }
  .featured {
    margin-left: -1.5rem!important;
    margin-right: -1.5rem!important;
    width: calc(100%+3rem);
  }
}

@media (min-width: 992px) {
  section.highlight {
    margin-left: -3rem!important;
    margin-right: -3rem!important;
    padding: 3rem!important;
  }
  section.highlight.first {
    margin-top: -3rem;
  }
  .featured {
    margin-left: -3rem!important;
    margin-right: -3rem!important;
    width: calc(100%+6rem);
  }
  .figure,
  .figure-img {
    width: 100%;
  } 
}

